--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -23,6 +23,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            cd /home/azureuser/flask_hello
+            cd /home/${{ secrets.USERNAME }}/flask_hello
+            sudo pkill -9 -u ${{ secrets.USERNAME }}
             git pull
             python3 app.py
