--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -7,7 +7,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    steps:          
+    steps:      
+      - name: Checkout 
+        uses: actions/checkout@v2 
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
