--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -6,10 +6,8 @@ on:
   workflow_dispatch:
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:      
-      - name: Checkout 
-        uses: actions/checkout@v2 
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
